<resources>
    <string name="app_name">Tea</string>
    <string name="premium_teas_from_around_the_world">Premium Teas from Around the World</string>
    <string name="from_asia_to_africa_india_to_north_america_we_have_a_wide_variety_of_teas_that_have_been_made_by_passionate_tea_farmers_of_all_different_walks_of_life_from_floral_hints_to_the_fruity_tones_you_can_get_a_taste_of_the_world_in_the_comfort_of_your_cup">From Asia to Africa, India to North America, we have a wide variety of teas that have been made by passionate tea farmers of all different walks of life. From floral hints to the fruity tones you can get a taste of the world in the comfort of your cup.</string>
    <string name="what_we_re_drinking_now">What We’re Drinking Now</string>
    <string name="latest_products">Latest Products</string>
    <string name="featured_products">Featured Products</string>
    <string name="beat_seller">Beat Seller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
</resources>